--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
  
  @layer base {
   body {
-    @apply bg-[#18171F] flex flex-col w-screen h-screen m-auto items-center text-[#E6E5EA] font-manrope;
+    @apply bg-zinc-700 flex flex-col w-screen h-screen m-auto items-center text-white font-manrope;
   }
   label {
     @apply pl-[30px]
