--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 1.5rem;
+  height: 1rem;
+  background-color: #18171F;
+  transform: scale(2);
+}
+
+#slider::-webkit-slider-thumb:hover {
+  transform: scale(2.4);
+}
  
  @layer base {
   body {
-    @apply bg-zinc-700 flex flex-col w-screen h-screen m-auto items-center text-white font-manrope;
+    @apply bg-zinc-700 flex flex-col w-screen h-screen m-auto items-center justify-center text-white font-manrope;
   }
   label {
-    @apply pl-[30px]
+    @apply pl-6
   }
  }
